Fix-ENG-351-Overflow-Multiple-Calendars

--- a/src/modules/base/calendar/calendar.css
+++ b/src/modules/base/calendar/calendar.css
@@ -86,4 +86,5 @@ div:focus {
 
 .avonni-calendar__scrolling {
     overflow-x: auto;
+    overflow-y: hidden;
 }
